# dstk_46_1

./: .gitignore  README.md  config.json  config_files.ipynb  eda_code.py  eval.py  git_ignore_instructions.txt  model_training.ipynb  preprocessing.py  pyproject.toml  yaml_pipeline.py
config_files/: config.cfg  config.ini  config.json  config.py  config.xml  config.yaml  config_schema.py  pipeline_config.yaml
example_config_files/: airflow.conf  postgresl.conf
inference/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
inference/config/: default_inference_config.json
inference/data_models/: api_resonse_schema.py  employee_data_schema.py  model_inference_response_schema.py
inference/download_scripts/: download_config.py  download_model.py
inference/models/: model.pkl
inference/src/: inference_code.py
server/: api.py
